--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -13,43 +13,49 @@
           extend: {
             colors: {
               primary: {
-                '50': '#eff6ff',
-                '100': '#dbeafe',
-                '200': '#bfdbfe',
-                '300': '#93c5fd',
-                '400': '#60a5fa',
-                '500': '#3b82f6',
-                '600': '#2563eb',
-                '700': '#1d4ed8',
-                '800': '#1e40af',
-                '900': '#1e3a8a',
-                '950': '#172554',
+                '50': '#eff6ff', '100': '#dbeafe', '200': '#bfdbfe',
+                '300': '#93c5fd', '400': '#60a5fa', '500': '#3b82f6',
+                '600': '#2563eb', '700': '#1d4ed8', '800': '#1e40af',
+                '900': '#1e3a8a', '950': '#172554',
               },
             }
           }
         }
       }
     </script>
-     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/react-router-dom@6/umd/react-router-dom.production.min.js"></script>
-    <script src="https://unpkg.com/recharts/umd/Recharts.min.js"></script>
-    <script src="https://unpkg.com/lucide-react@0.292.0/dist/umd/lucide-react.min.js"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.6.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.525.0",
-    "recharts": "https://esm.sh/recharts@^3.0.2"
-  }
-}
-</script>
+    <link rel="stylesheet" href="style.css">
 </head>
   <body class="bg-slate-50 dark:bg-slate-900">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <div id="app-container" class="flex h-screen bg-slate-50 dark:bg-slate-900 text-slate-900 dark:text-slate-100">
+      <!-- Sidebar is rendered by JS -->
+      <aside id="sidebar-container" class="fixed top-0 left-0 z-30 w-64 h-full bg-white dark:bg-slate-800 shadow-xl transition-transform duration-300 ease-in-out -translate-x-full md:translate-x-0 md:relative"></aside>
+
+      <div class="flex-1 flex flex-col overflow-hidden">
+          <!-- Mobile Header -->
+          <header id="mobile-header" class="flex justify-between items-center p-4 bg-white dark:bg-slate-800 shadow-md md:hidden">
+              <h1 class="text-xl font-bold text-primary-600 dark:text-primary-400">Automation Hub</h1>
+              <div class="flex items-center gap-2">
+                  <div id="theme-toggle-mobile-container"></div>
+                  <button id="sidebar-open-button" class="text-slate-500 dark:text-slate-400">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path></svg>
+                  </button>
+                   <button id="sidebar-close-button" class="text-slate-500 dark:text-slate-400 hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                   </button>
+              </div>
+          </header>
+
+          <!-- Desktop Header -->
+          <header class="hidden md:flex justify-end items-center p-4 border-b border-slate-200 dark:border-slate-700">
+              <div id="theme-toggle-desktop-container"></div>
+          </header>
+          
+          <main id="app-content" class="flex-1 overflow-x-hidden overflow-y-auto"></main>
+      </div>
+
+      <div id="sidebar-overlay" class="fixed inset-0 bg-black/30 z-20 md:hidden hidden"></div>
+    </div>
+    <div id="toast-container" class="fixed top-5 right-5 z-50 space-y-2"></div>
+    <script src="script.js"></script>
   </body>
 </html>
